--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "json-server": "json-server -p 5000 -w db.json"
   },
   "dependencies": {
+    "@directus/sdk": "^10.3.3",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
@@ -20,6 +21,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "js-cookie": "^3.0.5",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
